# mcp-demo

./: .gitignore  LICENSE  README.md  agent.py  pyproject.toml  sample.env
prompts/: cloud_cost_agent.md
src/mcp_demo/: agent.py  cli.py  utils.py
